force-app/main/default/objects/CB_Customer_Alert__c/CB_Customer_Alert__c.object-meta.xml
<CustomObject>
    <description>Agent alerts for fraud, screening, payments</description>
    <label>CB Customer Alert</label>
    <nameField>
        <displayFormat>ALT-{000000}</displayFormat>
        <label>CB Customer Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Customer Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>