force-app/main/default/objects/CB_Customer_Alert__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Customer Alerts</relationshipLabel>
    <relationshipName>CB_Customer_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>