force-app/main/default/objects/CB_Customer_Alert__c/fields/Fin_Account__c.field-meta.xml
<CustomField>
    <fullName>Fin_Account__c</fullName>
    <label>Financial Account</label>
    <referenceTo>CB_Fin_Account__c</referenceTo>
    <relationshipLabel>Financial Account</relationshipLabel>
    <relationshipName>Fin_Account</relationshipName>
    <type>Lookup</type>
</CustomField>