force-app/main/default/objects/CB_Customer_Alert__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Info</fullName><default>false</default><label>Info</label></value><value><fullName>Warning</fullName><default>false</default><label>Warning</label></value><value><fullName>Critical</fullName><default>false</default><label>Critical</label></value></valueSetDefinition></valueSet>
    <type>Picklist</type>
</CustomField>